--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -5,3 +5,12 @@ img{
 .logo{
     width:100px;
 }
+
+.container {
+  width: 920px;
+  margin: 0 auto 40px auto;
+}
+
+.col-md-6 {
+    opacity: 0.5;
+}
