--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -7,15 +7,16 @@ img{
 }
 
 .container {
-  width: 920px;
-  margin: 0 auto 40px auto;
+  margin: 0 auto 30px auto;
 }
 
 .col-md-6 {
     opacity: 0.5;
 }
 
-.row {
-    width: 920px;
-    margin: 0 auto 40px auto;
+.bg-img {
+    background: url(../img/main.jpg) no-repeat;
+    background-size: cover;
+    padding: 100px 0;
+    height: 100vh;
 }
